<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Settings" >
    <PreferenceCategory
        android:title="@string/general_options" >
        <EditTextPreference
            android:key="message_to_text"
            android:title="@string/message_text"
            android:summary="@string/change_message_to_friend"
            android:dialogTitle="@string/enter_text"
            android:defaultValue="@string/message_to_text" />
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/speed_dial_options" >
        <ListPreference
            android:key="dial1"
            android:title="@string/speed_dial_1"
            android:summary="@string/edit_contact"
            android:defaultValue="None" />
		<ListPreference
            android:key="dial2"
            android:title="@string/speed_dial_2"
            android:summary="@string/edit_contact"
            android:defaultValue="None" />
        <ListPreference
            android:key="dial3"
            android:title="@string/speed_dial_3"
            android:summary="@string/edit_contact"
            android:defaultValue="None" />
        <ListPreference
            android:key="dial4"
            android:title="@string/speed_dial_4"
            android:summary="@string/edit_contact"
            android:defaultValue="None" />
        <ListPreference
            android:key="dial5"
            android:title="@string/speed_dial_5"
            android:summary="@string/edit_contact"
            android:defaultValue="None" />
        <ListPreference
            android:key="dial6"
            android:title="@string/speed_dial_6"
            android:summary="@string/edit_contact"
            android:defaultValue="None" />
    </PreferenceCategory>
    
    
    
</PreferenceScreen>